# server/api/controllers/user/student/router.js
@@ -1,0 +1,5 @@
+import * as express from 'express';
+import Controller from "./controller";
+
+export default express.Router()
+                .get("/", Controller.get)
