# server/api/controllers/user/tutor/router.js
@@ -1,0 +1,5 @@
+import * as expresss from 'express';
+import controller from './controller';
+export default expresss
+        .Router()
+        .get("/",controller.get)
